--- a/info_int.html
+++ b/info_int.html
@@ -1,87 +1,69 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-	 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	<!-- Global Site Tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114077693-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-114077693-1');
-</script>
-<meta charset="UTF-8">
-<title>Интересные факты</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<div class="header">
-		<!--<img src="img\logo.svg" height="178" width="264" style=" padding-left: 400px">!-->
-		<div class="header-title">
-			<p class="header-title-text">Плавательный бассейн Дельфин</p>
-		</div>
-		<div class="header-contacts">
-				<div class="header-contacts-block">
-					<p class="font-header-title" style="padding-left: 20px">Наши контакты</p>
-					<p class="text" style="padding-top: 20px; padding-left: 20px">
-						Адрес: г. Омск, Кировский округ,<br>
-						ул. Мельничная, 4.<br>
-					</p>
-					<p class="text  header-contacts-block-text" style="padding-top: 20px;  padding-left: 20px">
-						Телефон: <a href="tel:55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a><br>
-						Почта: <a href="mailto:aquafitness@bk.ru" style="text-decoration: none; color: #dadaff">aquafitness@bk.ru</a>
-					</p>
-				</div>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2292.252985155408!2d73.32307758051876!3d54.93357968623823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43ab03b2cb37d0cb%3A0x899bb25319c3b143!2z0YPQuy4g0JzQtdC70YzQvdC40YfQvdCw0Y8sIDQsINCe0LzRgdC6LCDQntC80YHQutCw0Y8g0L7QsdC7LiwgNjQ0MDgy!5e0!3m2!1sru!2sru!4v1517129719564" 
-				width="210" height="191" allowfullscreen style="border: 0" class="header-contacts-map"></iframe>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="styles.css">
+		<title>Бассейн "Дельфин"</title>
+	</head>
+	<body>
+		<header>
+			<!--flexbox!-->
+			<div class="logo">
+				<h1>Плавательный<br>бассейн Дельфин</h1>
 			</div>
-		</div>
-	<div class="menu">
-		<a href="index.html" class="menu-but">Главная</a>
-		<a href="schedule.html" class="menu-but">Расписание</a>
-		<a href="pricelist.html" class="menu-but">Цены</a>
-		<a href="info_rules.html" class="menu-but">Информация</a>
-		<!--<a href="corp.html" class="menu-but">Корпоративным клиентам</a>!-->
-		<a href="gallery.html" class="menu-but">Галерея</a>
-		<div class="menu-share">
-			<!-- uSocial -->
-			<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
-			<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,mail" data-mobile="vi,wa,sms"></div>
-			<!-- /uSocial -->
-		</div>
-	</div>
-	<div class="content" style="width: 100%; height: 100vh;">
-		<div class="content-svblock">
-			<div class="center_border">
-				<div class="paper-shadow"> <!--Menu Information!-->
-					<a href="info_rules.html" class="svblock-but">Правила</a>
-					<a href="info_int.html" class="svblock-but">Полезная информация</a>
-					<a href="docs/dl/rules.zip" class="svblock-but">Скачать документы с правилами</a>
-					<a href="docs/dl/contracts.zip" class="svblock-but">Скачать бланки с договорами</a>
-				</div>
+			<div class="contacts">
+				<!--flexbox!-->
+				<span>Наши контакты</span>
+				<br>
+				<span>Адрес: г. Омск, Кировский округ, ул. Мельничная, 4.</span>
+				<br>
+				<span>Телефон: <a href="tel:55-06-70">+7 (3812) 55-06-70</a><br>
+				Почта: <a href="mailto:aquafitness@bk.ru">aquafitness@bk.ru</a><span>
 			</div>
-		</div>
-		<div class="content-data_svblock">
-			<div class="center_border paper-shadow">
-				<div class="content-about-text-title">
-					<p class="font-header-title">
-						Интересные факты
-					</p>
-				</div>
-				<div class="content-about-text-data data-format">
-					<p class="text">
-					<b>1.</b> Когда человек плывет — работают практически все его мышцы. Поэтому не нужно тренировать руки, потом ноги, далее пресс, спину, затем грудные и т.д. В процессе плавания, как уже сказано выше работает всё тело. Каждая мышца по сути получает нагрузку именно такую какая необходима, поэтому тело профессиональных пловцов гармонично развито.<br><br>
-					<b>2.</b> Плавание как спорт – является вторым после бега на лыжах спортом, который отлично тренирует практически все группы мышц.<br><br>
-					<b>3.</b> Постояв минуту в воде с температурой +20&deg;, в крови ощутимо повышается уровень гемоглобина. Плавать в холодной воде полезно для выработки гормонов, оно улучшает кровообращение, к тому же замедляет процессы клеточного старения организма.<br><br>
-					<b>4.</b> Интересные факт — плавание помогает снять стресс. Вода будто «смывает» весь негатив, дарит ощущение свежести, невероятной бодрости, заряжает энергией.
-					</p>
-					</div>
-				</div>
+			<div class="map">
+				<a href="https://go.2gis.com/vvr7n">
+					<div></div>
+				</a>
 			</div>
-		</div>
-	<div class="footer block-top-shadow">
-		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
-		Сайт находится в стадии разработки. Приносим извинения за некоторые неудобства.
-	</div>
-</body>
+		</header>
+		<nav class="header-nav">
+			<!--flexbox!-->
+			<a href="index.html">Главная</a>
+			<a href="schedule.html">Расписание</a>
+			<a href="pricelist.html">Цены</a>
+			<a href="info_rules.html">Информация</a>
+			<a href="gallery.html">Галерея</a>
+			<div class="share">
+				<!-- uSocial -->
+				<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
+				<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,spoiler"></div>
+				<!-- /uSocial -->
+			</div>
+		</nav>
+		<main>
+			<section class="paper-field">
+				<article class="main_info">
+					<nav class="paper-nav">
+						<a href="info_rules.html">Правила</a>
+						<a href="info_int.html">Полезная информация</a>
+						<a href="../docs/dl/rules.zip">Скачать документы с правилами</a>
+						<a href="../docs/dl/contracts.zip">Скачать бланки с договорами</a>
+					</nav>
+					<aside>
+						<h2 class="info-title">Интересные факты</h2>
+						<p>
+							<b>1.</b> Когда человек плывет — работают практически все его мышцы. Поэтому не нужно тренировать руки, потом ноги, далее пресс, спину, затем грудные и т.д. В процессе плавания, как уже сказано выше работает всё тело. Каждая мышца по сути получает нагрузку именно такую какая необходима, поэтому тело профессиональных пловцов гармонично развито.<br><br>
+							<b>2.</b> Плавание как спорт – является вторым после бега на лыжах спортом, который отлично тренирует практически все группы мышц.<br><br>
+							<b>3.</b> Постояв минуту в воде с температурой +20&deg;, в крови ощутимо повышается уровень гемоглобина. Плавать в холодной воде полезно для выработки гормонов, оно улучшает кровообращение, к тому же замедляет процессы клеточного старения организма.<br><br>
+							<b>4.</b> Интересный факт — плавание помогает снять стресс. Вода будто «смывает» весь негатив, дарит ощущение свежести, невероятной бодрости, заряжает энергией.
+						</p>
+					</aside>
+				</article>
+			</section>
+		</main>
+		<footer>
+			<p>Copyright &copy; 2023 Г. ПБ "Дельфин"</p>
+		</footer>
+	</body>
 </html>
