--- a/gallery.html
+++ b/gallery.html
@@ -1,134 +1,53 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
-<head>
-	 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114077693-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-114077693-1');
-</script>
-<meta charset="UTF-8">
-<title>Галерея</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<div class="header">
-		<!--<img src="img\logo.svg" height="178" width="264" style=" padding-left: 400px">!-->
-		<div class="header-title">
-			<p class="header-title-text">Плавательный бассейн Дельфин</p>
-		</div>
-		<div class="header-contacts">
-				<div class="header-contacts-block">
-					<p class="font-header-title" style="padding-left: 20px">Наши контакты</p>
-					<p class="text" style="padding-top: 20px; padding-left: 20px">
-						Адрес: г. Омск, Кировский округ,<br>
-						ул. Мельничная, 4.<br>
-					</p>
-					<p class="text  header-contacts-block-text" style="padding-top: 20px;  padding-left: 20px">
-						Телефон: <a href="tel:55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a>
-						<br>
-						Почта: <a href="mailto:aquafitness@bk.ru" style="text-decoration: none; color: #dadaff">aquafitness@bk.ru</a>
-					</p>
-				</div>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2292.252985155408!2d73.32307758051876!3d54.93357968623823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43ab03b2cb37d0cb%3A0x899bb25319c3b143!2z0YPQuy4g0JzQtdC70YzQvdC40YfQvdCw0Y8sIDQsINCe0LzRgdC6LCDQntC80YHQutCw0Y8g0L7QsdC7LiwgNjQ0MDgy!5e0!3m2!1sru!2sru!4v1517129719564" 
-				width="210" height="191" allowfullscreen style="border: 0" class="header-contacts-map"></iframe>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="imgs_viewer.css" type="text/css"/>
+		<script src="imgs_viewer.js" type="text/javascript"></script>
+		<title>Бассейн "Дельфин"</title>
+	</head>
+	<body>
+		<header>
+			<!--flexbox!-->
+			<div class="logo">
+				<h1>Плавательный<br>бассейн Дельфин</h1>
 			</div>
-		</div>
-	<div class="menu">
-		<a href="index.html" class="menu-but">Главная</a>
-		<a href="schedule.html" class="menu-but">Расписание</a>
-		<a href="pricelist.html" class="menu-but">Цены</a>
-		<a href="info_rules.html" class="menu-but">Информация</a>
-		<!--<a href="corp.html" class="menu-but">Корпоративным клиентам</a>!-->
-		<a href="gallery.html" class="menu-but">Галерея</a>
-		<div class="menu-share">
-			<!-- uSocial -->
-			<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
-			<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,mail" data-mobile="vi,wa,sms"></div>
-			<!-- /uSocial -->
-		</div>
-	</div>
-	<div class="content" style="width: 100%; height: 1750px;">
-				<div class="up_line block-top-shadow"></div>
-			<div class="paper-shadow">
-				<div class="content-about-text-title">
-					<p class="font-header-title">
-						Фотографии бассейна
-					</p>
-				</div>
-				<div class="content-about-text-data">
-					<div class="content-dwlblock">
-						<a href="photo/small_pool.jpg"><img src="photo/small_pool.jpg" style="height: 100%; width: 100%" alt="малая чаша"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="photo/big_pool.jpg"><img src="photo/big_pool.jpg" style="height: 100%; width: 100%" alt="большая чаша"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="photo/sauna.jpg"><img src="photo/sauna.jpg" style="height: 100%; width: 100%" alt="сауна"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\0.jpg"><img src="new\gallery\t_0.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\1.jpg"><img src="new\gallery\t_1.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\2.jpg"><img src="new\gallery\t_2.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\3.jpg"><img src="new\gallery\t_3.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\4.jpg"><img src="new\gallery\t_4.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\5.jpg"><img src="new\gallery\t_5.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\6.jpg"><img src="new\gallery\t_6.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\7.jpg"><img src="new\gallery\t_7.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\8.jpg"><img src="new\gallery\t_8.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\9.jpg"><img src="new\gallery\t_9.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\10.jpg"><img src="new\gallery\t_10.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\11.jpg"><img src="new\gallery\t_11.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\12.jpg"><img src="new\gallery\t_12.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\13.jpg"><img src="new\gallery\t_13.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\14.jpg"><img src="new\gallery\t_14.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\15.jpg"><img src="new\gallery\t_15.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\16.jpg"><img src="new\gallery\t_16.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>
-					<div class="content-dwlblock">
-						<a href="new\gallery\17.jpg"><img src="new\gallery\t_17.jpg" style="height: 100%; width: 100%" alt="мать и дитя"></a>
-					</div>	
-				</div>
+			<div class="contacts">
+				<!--flexbox!-->
+				<span>Наши контакты</span>
+				<br>
+				<span>Адрес: г. Омск, Кировский округ, ул. Мельничная, 4.</span>
+				<br>
+				<span>Телефон: <a href="tel:55-06-70">+7 (3812) 55-06-70</a><br>
+				Почта: <a href="mailto:aquafitness@bk.ru">aquafitness@bk.ru</a><span>
 			</div>
-		</div>
-	<div class="footer block-top-shadow">
-		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
-		Сайт находится в стадии разработки. Приносим извенения за некоторые неудобства.
-	</div>
-</body>
+			<div class="map">
+				<a href="https://2gis.ru/omsk/firm/282003257688243%2C73.324095%2C54.93391?queryState=center%2F73.32549%2C54.93351%2Fzoom%2F17">
+					<div></div>
+				</a>
+			</div>
+		</header>
+		<nav class="header-nav">
+			<!--flexbox!-->
+			<a href="index.html">Главная</a>
+			<a href="schedule.html">Расписание</a>
+			<a href="pricelist.html">Цены</a>
+			<a href="info_rules.html">Информация</a>
+			<a href="gallery.html">Галерея</a>
+			<div class="share">
+				<!-- uSocial -->
+				<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
+				<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,spoiler"></div>
+				<!-- /uSocial -->
+			</div>
+		</nav>
+		<main>
+			<section id="imgs_viewer"></section>
+		</main>
+		<footer>
+			<p>Copyright &copy; 2023 Г. ПБ "Дельфин"</p>
+		</footer>
+	</body>
 </html>
