--- a/index.html
+++ b/index.html
@@ -1,211 +1,151 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
-<head>
-	 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	<meta name="yandex-verification" content="4c733645b5a3681f"/>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114077693-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'UA-114077693-1');
-</script>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Бассейн Дельфин г. Омска предлагает услуги: аквааэробика, водное поло, мать и дитя, спортивно-оздоровительное плавание, свободное плавание и др."/>
-<title>Бассейн "Дельфин"</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<div class="header">
-		<div class="header-title">
-			<p class="header-title-text">Плавательный бассейн Дельфин</p>
-		</div>
-		<div class="header-contacts">
-				<div class="header-contacts-block">
-					<p class="font-header-title" style="padding-left: 20px">Наши контакты</p>
-					<p class="text" style="padding-top: 20px; padding-left: 20px">
-						Адрес: г. Омск, Кировский округ,<br>
-						ул. Мельничная, 4.<br>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="styles.css">
+		<title>Бассейн "Дельфин"</title>
+	</head>
+	<body>
+		<header>
+			<!--flexbox!-->
+			<div class="logo">
+				<h1>Плавательный<br>бассейн Дельфин</h1>
+			</div>
+			<div class="contacts">
+				<!--flexbox!-->
+				<span>Наши контакты</span>
+				<br>
+				<span>Адрес: г. Омск, Кировский округ, ул. Мельничная, 4.</span>
+				<br>
+				<span>Телефон: <a href="tel:55-06-70">+7 (3812) 55-06-70</a><br>
+				Почта: <a href="mailto:aquafitness@bk.ru">aquafitness@bk.ru</a><span>
+			</div>
+			<div class="map">
+				<a href="https://go.2gis.com/vvr7n">
+					<div></div>
+				</a>
+			</div>
+		</header>
+		<nav class="header-nav">
+			<!--flexbox!-->
+			<a href="index.html">Главная</a>
+			<a href="schedule.html">Расписание</a>
+			<a href="pricelist.html">Цены</a>
+			<a href="info_rules.html">Информация</a>
+			<a href="gallery.html">Галерея</a>
+			<div class="share">
+				<!-- uSocial -->
+				<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
+				<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,spoiler"></div>
+				<!-- /uSocial -->
+			</div>
+		</nav>
+		<main>
+			<section class="paper-field">
+				<article class="ads bckg_img" style="background-image: url(img/ads_empt.png);">
+					<h2>Объявление</h2>
+					<p>
+						Уважаемые
+						посетители!<br>
+						Для записи детей (заключения договора) в группы требуются медицинские справки:
+						допуск к занятиям в бассейне от педиатра (для детей до 11 лет с результатом на гельминты).
+						Без медицинского допуска договор не оформляется и запись ребенка в группу не регистрируется!
 					</p>
-					<p class="text header-contacts-block-text" style="padding-top: 20px;  padding-left: 20px">
-						Телефон: <a href="tel:55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a>
-						<br>
-						Почта: <a href="mailto:aquafitness@bk.ru" style="text-decoration: none; color: #dadaff">aquafitness@bk.ru</a>
+				</article>	
+				<article class="main_info bckg_img" style="background-image: url(img/main_info.png);">
+					<aside>
+						<h2>О нас</h2>
+						<p>
+							Исходя из специфики работы (бассейн школьный), мы строго контролируем качество воды в чашах бассейна и следим за санитарным состоянием спортивного сооружения в целом. 
+							В нашем бассейне используются современные технологии многоступенчатой очистки воды, которые позволяют обходиться применением минимального количества агрессивных химикатов, поэтому в воздухе практически отсутствуют пары хлора. 
+							Температурный режим воды и воздуха поддерживается современной системой автоматики, и в бассейне круглый год оптимальный микроклимат, температура в большой чаше бассейна 28-29&deg;, в малой чаше – 30-31&deg;.
+						</p>
+					</aside>
+					<img src="img/main_photo.jpg" alt="Бассейн">
+				</article>
+			</section>
+			<section class="services">
+				<h3>Мы предлагаем</h3>
+				<article>
+					<img src="img/serv_aqua.png" alt="Аквааэробика">
+					<p>
+						Аквааэробика<br><br>
+						Групповая тренировка для всех желающих с различным специализированным оборудованием под зажигательную музыку. Эффективные физические упражнения в воде повышают сопротивляемость организма болезням, тренируя сердечно-сосудистую, 
+						дыхательную системы и опорно-двигательный аппарат, помогают снизить вес, улучшить фигуру и поднять эмоционально-жизненный тонус.
 					</p>
-				</div>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2292.252985155408!2d73.32307758051876!3d54.93357968623823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43ab03b2cb37d0cb%3A0x899bb25319c3b143!2z0YPQuy4g0JzQtdC70YzQvdC40YfQvdCw0Y8sIDQsINCe0LzRgdC6LCDQntC80YHQutCw0Y8g0L7QsdC7LiwgNjQ0MDgy!5e0!3m2!1sru!2sru!4v1517129719564" 
-				width="210" height="191" allowfullscreen style="border: 0" class="header-contacts-map"></iframe>
-			</div>
-		</div>
-	<div class="menu">
-		<a href="index.html" class="menu-but">Главная</a>
-		<a href="schedule.html" class="menu-but">Расписание</a>
-		<a href="pricelist.html" class="menu-but">Цены</a>
-		<a href="info_rules.html" class="menu-but">Информация</a>
-		<!--<a href="corp.html" class="menu-but">Корпоративным клиентам</a>!-->
-		<a href="gallery.html" class="menu-but">Галерея</a>
-		<div class="menu-share">
-			<!-- uSocial -->
-			<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
-			<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,mail" data-mobile="vi,wa,sms"></div>
-			<!-- /uSocial -->
-		</div>
-	</div>
-	<div class="content">
-		<div class="up_line block-top-shadow"></div>
-				<div class="content-info_block paper-shadow">
-				<div class="content-about-text-title">
-					<p class="font-content-title">Объявление</p>
-				</div>
-				<div class="content-about-text-data">
-					<p class="text">Уважаемые посетители!<br>
-						Информация на данном сайте пока неактуальна.<br>
-						Расписание и цены можно уточнить по номеру телефона бассейна.<br>
-						Ведутся технические работы.<br>
-						Приносим свои извинения.
+				</article>
+				<article>
+					<img src="img/serv_training.png" alt="Спортивно-оздоровительное плавание">
+					<p>
+						Спортивно-оздоровительное плавание<br><br>
+						Детские групповые обучающие занятия: от 5 до 11 лет - в малой чаше, для детей среднего и старшего школьного возраста в большой чаше бассейна. Посещая тренировки в течение года ваши дети учатся плавать разными способами, 
+						укрепляя свою нервную систему, сердечно-сосудистый и дыхательный аппарат. Занятия в воде помогут укрепить мышцы и сформировать правильную осанку.
 					</p>
-				</div>
-		</div>
-		<div class="content-about paper-shadow">
-			<div class="content-about-text">
-				<div class="content-about-text-title">
-					<p class="font-content-title">О нас</p>
-				</div>
-				<div class="content-about-text-data">
-					<p class="text">			
-						Исходя из специфики работы (бассейн школьный), мы строго контролируем качество воды в чашах бассейна и следим за санитарным состоянием спортивного сооружения в целом. 
-						В нашем бассейне используются современные технологии многоступенчатой очистки воды, которые позволяют обходиться применением минимального количества агрессивных химикатов, поэтому в воздухе практически отсутствуют пары хлора. 
-						Температурный режим воды и воздуха поддерживается современной системой автоматики, и в бассейне круглый год оптимальный микроклимат, температура в большой чаше бассейна 28-29&deg;, в малой чаше – 30-31&deg;.
+				</article>
+				<article>
+					<img src="img/serv_polo.png" alt="Водное поло">
+					<p>
+						Водное поло<br><br>
+						Вид спорта, сочетающий в себе сразу несколько направлений: плавание, волейбол, баскетбол и хоккей. Эта игра способствует также развитию физических качеств, закаливанию организма, помогает воспитывать в себе целеустремленность, 
+						командный дух, волю к победе. Водное поло — замечательный вид спорта для тех, кто хочет хорошо и быстро плавать, а также стать выносливым и ловким.
 					</p>
-				</div>
-			</div>
-			<img src="new/site/main_photo.jpg" height="335" width="445" style="float: right; padding-right: 48px" alt="Бассейн">
-		</div>
-		<div class="content-service-title"><p class="font-content-title">Мы предлагаем</p></div>
-		<div class="content-service">
-			<div class="content-service-pic_container">
-				<img class="round" src="img/serv_aqua.png" height="238" width="236" alt="Аквааэробика">
-			</div>
-			<div class="content-service-data_container ver_line">
-				<div class="content-service-data_container-title">
-					<p class="font-content-serv-title">Аквааэробика</p>
-				</div>
-					<p class="serv_text">			
-						Групповая тренировка для всех желающих с различным специализированным оборудованием под зажигательную музыку. Эффективные физические упражнения в воде повышают сопротивляемость организма болезням, тренируя сердечно-сосудистую, дыхательную системы и опорно-двигательный аппарат, помогают снизить вес, улучшить фигуру и поднять эмоционально-жизненный тонус.
+				</article>
+				<article>
+					<img src="img/serv_mac.png" alt="Мать и дитя">
+					<p>
+						"Мать и дитя"<br><br>
+						Групповые занятия предназначены для самых маленьких посетителей. Специализированные занятия  в воде для малышей от 1,5 до 5 лет с мамами или папами под руководством опытного тренера будут не только самыми любимыми для вашего ребенка, 
+						но и  станут хорошей основой в развитии и укреплении здоровья  малыша.
 					</p>
-			</div>
-		</div>
-		<div class="content-service hor_line" style="background-color: #f6fafd">
-			<div class="content-service-pic_container">
-				<img class="round" src="img/serv_training.png" height="238" width="236" alt="Спортивно-оздоровительное плавание">
-			</div>
-			<div class="content-service-data_container ver_line">
-				<div class="content-service-data_container-title">
-					<p class="font-content-serv-title">Спортивно-оздоровительное плавание</p>
-				</div>
-					<p class="serv_text">			
-						Детские групповые обучающие занятия: от 5 до 11 лет - в малой чаше, для детей среднего и старшего школьного возраста в большой чаше бассейна. Посещая тренировки в течение года ваши дети учатся плавать разными способами, укрепляя свою нервную систему, сердечно-сосудистый и дыхательный аппарат. Занятия в воде помогут укрепить мышцы и сформировать правильную осанку.
-					</p>
-			</div>
-		</div>
-		<div class="content-service hor_line">
-			<div class="content-service-pic_container">
-				<img class="round" src="img/serv_polo.png" height="238" width="236" alt="Водное поло">
-			</div>
-			<div class="content-service-data_container ver_line">
-				<div class="content-service-data_container-title">
-					<p class="font-content-serv-title">Водное поло</p>
-				</div>
-					<p class="serv_text">			
-						Вид спорта, сочетающий в себе сразу несколько направлений: плавание, волейбол, баскетбол и хоккей. Эта игра способствует также развитию физических качеств, закаливанию организма, помогает воспитывать в себе целеустремленность, командный дух, волю к победе. Водное поло — замечательный вид спорта для тех, кто хочет хорошо и быстро плавать, а также стать выносливым и ловким.
-					</p>
-			</div>
-		</div>
-		<div class="content-service hor_line" style="background-color: #f6fafd">
-			<div class="content-service-pic_container">
-				<img class="round" src="img/serv_mac.png" height="238" width="236" alt="Мать и дитя">
-			</div>
-			<div class="content-service-data_container ver_line">
-				<div class="content-service-data_container-title">
-					<p class="font-content-serv-title">"Мать и дитя"</p>
-				</div>
-					<p class="serv_text">			
-						Групповые занятия предназначены для самых маленьких посетителей. Специализированные занятия  в воде для малышей от 1,5 до 5 лет с мамами или папами под руководством опытного тренера будут не только самыми любимыми для вашего ребенка, но и  станут хорошей основой в развитии и укреплении здоровья  малыша.
-					</p>
-			</div>	
-		</div>
-		<div class="content-service hor_line">
-			<div class="content-service-pic_container">
-				<img class="round" src="img/serv_free.png" height="238" width="236" alt="Свободное плавание">
-			</div>
-			<div class="content-service-data_container ver_line">
-				<div class="content-service-data_container-title">
-					<p class="font-content-serv-title">Свободное плавание</p>
-				</div>
-					<p class="serv_text">			
+				</article>
+				<article>
+					<img src="img/serv_free.png" alt="Свободное плавание">
+					<p>
+						Свободное плавание<br><br>
 						Вы можете просто прийти поплавать и отдохнуть всей семьей. Сауна Вам также доступна. Плавание - это расслабляющий процесс, который зарядит ваше настроение на целый день.
 					</p>
-			</div>
-		</div>
-
-		<div class="content-service-title"><p class="font-content-title">Дополнительные услуги</p></div>
-			<div class="content-rule"> <!--1!-->
-				<div class="content-rule-data">
-					<div class="content-about-text-title">
-						<p class="font-content-title">Кислородный коктейль</p>
-					</div>
-					<div class="content-about-text-data">
-						<p class="serv_text">
-							После бассейна наши посетители могут без спешки и очереди воспользоваться<br>
-							стационарными фенами для сушки волос (услуга бесплатная),<br>
-							принять вкусный и освежающий кислородный коктейль из натуральных<br>
-							растительных компонентов: сиропа корня солодки и шиповника.<br>
-						</p>
-						<img src="img/kislorodniy-kokteyl.jpg" width="250" height="200" style="margin-top: 18px; float: left;" alt="кислородный коктейль">
-						<img src="img/kislorodniy-kokteyl2.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;" alt="кислородный коктейль">
-					</div>
-				</div>
-			</div>
-			<div class="content-rule"> <!--2!-->
-				<div class="content-rule-data">
-					<div class="content-about-text-title">
-						<p class="font-content-title">Тренажерный Зал</p>
-					</div>
-					<div class="content-about-text-data">
-						<p class="serv_text">
-							В нашем бассейне также присутствует небольшой тренажерный зал.<br>
-							Он укомплектован всеми необходимыми тренажерами<br>
-							и снарядами для занятий.<br>
-						</p>
-						<img src="new/gallery/13.jpg" width="250" height="200" style="margin-top: 18px; float: left;" alt="тренажерный зал">
-						<img src="new/gallery/15.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;" alt="тренажерный зал">
-					</div>
-				</div>
-			</div>
-			<div class="content-rule"> <!--3!-->
-				<div class="content-rule-data">
-					<div class="content-about-text-title">
-						<p class="font-content-title">Сауна</p>
-					</div>
-					<div class="content-about-text-data">
-						<p class="serv_text">
-							Посещение сауны входят в основную стоимость абонемента.<br>
-							Сауна находится рядом с большой чашей бассейна.<br>
-							Оборудование сауны позволяет использовать как сухой,<br>
-							так и влажный пар c арома-маслами.<br>
-						</p>
-						<img src="img/sauna.jpg" width="280" height="200" style="margin-top: 18px; float: left;" alt="Сауна">
-						<img src="new/gallery/7.jpg" width="300" height="200" style="margin-top: 18px; margin-left: 18px;" alt="Сауна">
-					</div>
-				</div>
-			</div>
-	</div>
-	<div class="footer block-top-shadow">
-		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
-		Сайт находится в стадии разработки. Приносим извинения за некоторые неудобства.
-			<!-- Yandex.Metrika counter -->
+				</article>
+			</section>
+			<h3>Дополнительные услуги</h3>
+			<section class="paper-field additional">
+				<article>
+					<aside>
+						<h2>Кислородный коктейль</h2>
+						<p>После бассейна наши посетители могут без спешки и очереди воспользоваться
+							стационарными фенами для сушки волос (услуга бесплатная),
+							принять вкусный и освежающий кислородный коктейль из натуральных
+							растительных компонентов: сиропа корня солодки и шиповника.</p>
+					</aside>
+					<img src="img/kislorodniy-kokteyl.jpg" alt="кислородный коктейль">
+					<img src="img/kislorodniy-kokteyl2.jpg" alt="кислородный коктейль">
+				</article>
+				<article>
+					<aside>
+						<h2>Тренажерный Зал</h2>
+						<p>В нашем бассейне также присутствует небольшой тренажерный зал.
+							Он укомплектован всеми необходимыми тренажерами
+							и снарядами для занятий.</p>
+					</aside>
+						<img src="gallery/13.jpg" alt="тренажерный зал">
+						<img src="gallery/15.jpg" alt="тренажерный зал">
+				</article>
+				<article>
+					<aside>
+						<h2>Сауна</h2>
+						<p>Посещение сауны входят в основную стоимость абонемента.
+							Сауна находится рядом с большой чашей бассейна.
+							Оборудование сауны позволяет использовать как сухой,
+							так и влажный пар c арома-маслами.</p>
+					</aside>
+						<img src="img/sauna.jpg" alt="Сауна">
+						<img src="gallery/7.jpg" alt="Сауна">
+				</article>
+			</section>
+		</main>
+		<footer>
+			<p>Copyright &copy; 2023 Г. ПБ "Дельфин"</p>
+				<!-- Yandex.Metrika counter -->
 				<script src="https://mc.yandex.ru/metrika/watch.js" type="text/javascript"></script>
 				<script type="text/javascript" >
 				try {
@@ -219,6 +159,6 @@
 				</script>
 				<noscript><div><img src="https://mc.yandex.ru/watch/47631874" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 			<!-- /Yandex.Metrika counter -->
-	</div>
-</body>
+		</footer>
+	</body>
 </html>
