--- a/pricelist.html
+++ b/pricelist.html
@@ -5,15 +5,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="table.css">
-		<script type="module" src="pricelist.js"></script>
+		<script type="module" src="./pricelist.js"></script>
 		<title>Бассейн "Дельфин"</title>
 	</head>
 	<body>
 		<header>
+			<!--flexbox!-->
 			<div class="logo">
 				<h1>Плавательный<br>бассейн Дельфин</h1>
 			</div>
 			<div class="contacts">
+				<!--flexbox!-->
 				<span>Наши контакты</span>
 				<br>
 				<span>Адрес: г. Омск, Кировский округ, ул. Мельничная, 4.</span>
