--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="table.css">
-		<script type="module" src="schedule.js"></script>
+		<script type="module" src="./schedule.js"></script>
 		<title>Бассейн "Дельфин"</title>
 	</head>
 	<body>
