--- a/pricelist.html
+++ b/pricelist.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="table.css">
 		<script type="module" src="./pricelist.js"></script>
+		<script>console.log("pricelist ok");</script>
 		<title>Бассейн "Дельфин"</title>
 	</head>
 	<body>
