--- a/schedule.html
+++ b/schedule.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="table.css">
 		<script type="module" src="./schedule.js"></script>
+		<script>console.log("schedule ok");</script>
 		<title>Бассейн "Дельфин"</title>
 	</head>
 	<body>
