--- a/schedule.html
+++ b/schedule.html
@@ -5,18 +5,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="table.css">
-		<script type="module">
-			import {load_doc, load_JSON_promise, fill_button_list} from './base.js';
-
-			Promise.all([
-				load_JSON_promise("json_data/groups.json"),
-				load_JSON_promise("json_data/trainers.json"),
-				load_doc
-			]).then((values) => {
-				var groups_json = values[0].groups;
-				var trainers_json = values[1];
-				fill_button_list(groups_json, "group_names_list", "group_data_list", "common_table", "common_table_even", "common_table_subgroup", [trainers_json]);
-			});
+		<script>
+			const script_base = document.createElement("script");
+			script_base.type = "module";
+			script_base.src = './base.js';
+			script_base.onload = function() {
+				script_schedule = document.createElement("script");
+				script_schedule.type = "module";
+				script_schedule.src = "./schedule.js";
+				document.head.appendChild(script_schedule);
+			}
+			document.head.appendChild(script_base);
 		</script>
 		<title>Бассейн "Дельфин"</title>
 	</head>
