--- a/pricelist.html
+++ b/pricelist.html
@@ -5,7 +5,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="table.css">
-		<script type="module"></script>
+		<script>
+			let common_script = "";
+			fetch('base.txt')
+			.then(response => response.text())
+			.then(str => {
+				common_script += str;
+				fetch('pricelist.txt')
+				.then(response => response.text())
+				.then(str => {
+					common_script += "\n" + str;
+					let script_pricelist = document.createElement("script");
+					script_pricelist.textContent = common_script;
+					document.body.appendChild(script_pricelist);
+				});
+			});
+		</script>
 		<title>Бассейн "Дельфин"</title>
 	</head>
 	<body>
