insert script into html

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,37 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
 		<link rel="stylesheet" href="imgs_viewer.css" type="text/css"/>
-		<script src="imgs_viewer.js" type="text/javascript"></script>
+		<script>
+			function viewImg(e) {
+				var el = e.target;
+				if (el.tagName == "IMG") {
+				var popup = document.createElement("div");
+				popup.className = "imgs_popup";
+				popup.innerHTML = "<div></div><img src=\"" + el.src.split("t_").join('')+"\"/>";
+				document.body.appendChild(popup);
+				popup.style.opacity = "1.0";
+				popup.firstChild.onclick = function() {
+						popup.addEventListener("transitionend", function() { document.body.removeChild(popup); }, false);
+						popup.style.opacity = '0';
+					}
+				}
+			}
+
+			function getList() {
+				const num_files = 17;
+				var container = document.getElementById("imgs_viewer"), item;
+				for (let i = 0; i <= num_files; i++) {
+					item = document.createElement("img");
+					item.src = "gallery/t_" + i + ".jpg";
+					container.appendChild(item);
+				}
+			}
+
+			window.onload = function () {
+				getList();
+				document.getElementById('imgs_viewer').onclick = viewImg;
+			}
+		</script>
 		<title>Бассейн "Дельфин"</title>
 	</head>
 	<body>
